@@ -1,4 +1,5 @@
 ver 0.4.3
+- Supported assets that have multiple texture objects
 - Supported LightMapTexture2D
 - Added a function to update PackageSource (use "MOD " for PackageSource)
 
